# portfolio

./: .env  pyproject.toml
app/: main.py
app/core/: config.py  enum.py  role.py  security.py
app/db/: database.py  session.py
app/models/: category_model.py  comment_model.py  item_model.py  product_model.py  rating_model.py  user_model.py
app/routers/: auths_router.py  comments_router.py  items_router.py  product_router.py
app/schemas/: comment_schema.py  item_schema.py  product_schema.py  rating_schema.py  token_schema.py  user_schema.py
app/services/: crud.py  crud_service.py  product_services.py  user_services.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/models/: order_model.py  product_model.py  rating_model.py  user_model.py
backend/app/routers/: auths_router.py  product_router.py
backend/app/schemas/: product_schema.py  user_schema.py
backend/app/services/: crud_service.py  product_services.py  user_services.py
backend/app/util/: crud_service.py
backend/app/util/user/: auth_user.py  get_current_active_user.py  get_current_user.py  get_password_hash.py  get_user.py  verify_password.py
